# trebuchet

./: CMakeLists.txt  README.md  test_verify
backend/wgpu/: wgpu_ops.c
backend/wgpu/tests/: test_activations.c
core/include/: basednn.h
core/src/: network.c  ops.c
core/tests/full/: mnist.c  mnist_perf.c  verify_gpu_usage.c
examples/: mnist_mlp.c
include/basednn/: basednn.h  layer.h  network.h  ops.h  tensor.h
include/lessbasednn/: autograd.h  lessbasednn.h  network.h  ops.h  optimizer.h  tensor.h
include/petard/: loss.h  network.h  optimizer.h  tensor.h
include/petard/core/: activation.h  layer.h  loss.h  network.h  optimizer.h  tensor.h
include/petard/util/: conv.h
src/: autograd.c  layer.c  network.c  ops.c  optimizer.c  tensor.c
tests/full/: mnist.c  xor.c
tests/unit/: test_autograd.c  test_layer.c  test_network.c  test_ops.c  test_optimizer.c  test_tensor.c
